; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_buffer.c_evbuffer_invoke_callbacks_.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_buffer.c_evbuffer_invoke_callbacks_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i64, i32, i32, i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evbuffer_invoke_callbacks_(%struct.evbuffer* %0) #0 {
  %2 = alloca %struct.evbuffer*, align 8
  store %struct.evbuffer* %0, %struct.evbuffer** %2, align 8
  %3 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %4 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %3, i32 0, i32 6
  %5 = call i64 @LIST_EMPTY(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %9 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %8, i32 0, i32 4
  store i64 0, i64* %9, align 8
  %10 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %11 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %10, i32 0, i32 5
  store i64 0, i64* %11, align 8
  br label %44

12:                                               ; preds = %1
  %13 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %14 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %13, i32 0, i32 3
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %41

17:                                               ; preds = %12
  %18 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %19 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %22 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %21, i32 0, i32 1
  %23 = call i64 @event_deferred_cb_schedule_(i32 %20, i32* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %38

25:                                               ; preds = %17
  %26 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %27 = call i32 @evbuffer_incref_and_lock_(%struct.evbuffer* %26)
  %28 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %29 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %25
  %33 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %34 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = call i32 @bufferevent_incref_(i64 %35)
  br label %37

37:                                               ; preds = %32, %25
  br label %38

38:                                               ; preds = %37, %17
  %39 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %40 = call i32 @EVBUFFER_UNLOCK(%struct.evbuffer* %39)
  br label %41

41:                                               ; preds = %38, %12
  %42 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %43 = call i32 @evbuffer_run_callbacks(%struct.evbuffer* %42, i32 0)
  br label %44

44:                                               ; preds = %41, %7
  ret void
}

declare dso_local i64 @LIST_EMPTY(i32*) #1

declare dso_local i64 @event_deferred_cb_schedule_(i32, i32*) #1

declare dso_local i32 @evbuffer_incref_and_lock_(%struct.evbuffer*) #1

declare dso_local i32 @bufferevent_incref_(i64) #1

declare dso_local i32 @EVBUFFER_UNLOCK(%struct.evbuffer*) #1

declare dso_local i32 @evbuffer_run_callbacks(%struct.evbuffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
